fix alignment in mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,22 @@
 body {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
+    align-items: center;
 }
 
 h1 {
     font-family: 'Fascinate', cursive;
     color:  #46d6aa;
-    margin: auto;
+    /* margin: auto; */
 }
 
 #gameInfo {
     width: 600px;
-    margin: auto;
+    /* margin: auto; */
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-bottom: 5px;
     font-size: 18px;
 }
 
@@ -36,7 +37,7 @@ h1 {
 #gameField {
     width: 600px;
     height: 600px;
-    margin: auto;
+    /* margin: auto; */
     border-radius: 20px;
     background: linear-gradient(45deg ,#f9f871, #ffc75f);
     box-shadow: 10px 10px 8px #888888;
